--- a/package.json
+++ b/package.json
@@ -8,18 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.7.4",
+    "@types/validator": "^13.1.0",
     "expo": "~39.0.2",
+    "expo-image-picker": "~9.1.0",
+    "expo-permissions": "~9.3.0",
+    "expo-secure-store": "~9.2.0",
     "expo-status-bar": "~1.0.2",
+    "firebase": "7.9.0",
+    "moment": "^2.29.0",
+    "native-base": "^2.13.14",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
-    "react-native-web": "~0.13.7",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "react-native-web": "~0.13.7",
     "typescript": "~3.9.5"
   },
   "private": true
