--- a/package.json
+++ b/package.json
@@ -1,43 +1,50 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
-  },
-  "dependencies": {
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/native": "^5.7.4",
-    "@react-navigation/stack": "^5.9.1",
-    "@types/validator": "^13.1.0",
-    "expo": "~39.0.2",
-    "expo-font": "~8.3.0",
-    "expo-image-picker": "~9.1.0",
-    "expo-linear-gradient": "~8.3.0",
-    "expo-permissions": "~9.3.0",
-    "expo-secure-store": "~9.2.0",
-    "expo-status-bar": "~1.0.2",
-    "firebase": "7.9.0",
-    "moment": "^2.29.0",
-    "native-base": "^2.13.14",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.12",
-    "validator": "^13.1.17"
-  },
-  "devDependencies": {
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
-    "react-native-web": "~0.13.7",
-    "typescript": "~3.9.5"
-  },
-  "private": true
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web",
+        "eject": "expo eject",
+        "test": "jest"
+    },
+    "jest": {
+        "preset": "jest-expo"
+    },
+    "dependencies": {
+        "@react-native-community/masked-view": "0.1.10",
+        "@react-navigation/native": "^5.7.4",
+        "@react-navigation/stack": "^5.9.1",
+        "@types/validator": "^13.1.0",
+        "expo": "~39.0.2",
+        "expo-blur": "~8.2.0",
+        "expo-font": "~8.3.0",
+        "expo-image-picker": "~9.1.0",
+        "expo-linear-gradient": "~8.3.0",
+        "expo-permissions": "~9.3.0",
+        "expo-secure-store": "~9.2.0",
+        "expo-status-bar": "~1.0.2",
+        "firebase": "7.9.0",
+        "moment": "^2.29.0",
+        "native-base": "^2.13.14",
+        "react": "16.13.1",
+        "react-dom": "16.13.1",
+        "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+        "react-native-gesture-handler": "~1.7.0",
+        "react-native-reanimated": "~1.13.0",
+        "react-native-safe-area-context": "3.1.4",
+        "react-native-screens": "~2.10.1",
+        "react-native-web": "~0.13.12",
+        "validator": "^13.1.17"
+    },
+    "devDependencies": {
+        "@types/react": "~16.9.35",
+        "@types/react-dom": "~16.9.8",
+        "@types/react-native": "~0.63.2",
+        "jest-expo": "^39.0.0",
+        "react-native-web": "~0.13.7",
+        "react-test-renderer": "^16.13.1",
+        "typescript": "~3.9.5"
+    },
+    "private": true
 }
