--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-native-community/masked-view": "0.1.10",
         "@react-navigation/native": "^5.7.4",
         "@react-navigation/stack": "^5.9.1",
+        "@types/jest": "^26.0.14",
         "@types/validator": "^13.1.0",
         "expo": "~39.0.2",
         "expo-blur": "~8.2.0",
